manifests/apps/sharry/base/apps/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sharry
  namespace: user30-sharry
spec:
  host: sharry-user30-sharry.apps.cluster-fgn9q.fgn9q.sandbox1490.opentlc.com
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sharry
    weight: 100
  wildcardPolicy: None
